# romis

./: .gitignore  CMakeLists.txt  README.md  hello.cu  imgui.ini
data/: cornell-nightclub.blend  cornell-nightclub.mtl
data/modern-hall/: Hall10.blend  Hall10.blend1  modern-hall.mtl
data/the-breakfast-room/: the-breakfast-room.mtl
data/the-modern-living-room/: the-modern-living-room.mtl
data/the-wooden-staircase/: the-wooden-staircase.mtl
framework/: CMakeLists.txt
framework/cmake/: CompilerWarnings.cmake
framework/include/framework/: mesh.h  trackball.h
framework/src/: trackball.cpp  window.cpp
src/: CMakeLists.txt  bounding_volume_hierarchy.cpp  bounding_volume_hierarchy.h  bvh_interface.cpp  bvh_interface.h  common.h  config.cpp  config.h  intersect.cpp  intersect.h  light.cpp  light.h  main.cpp  render.cpp  render.h  reservoir.cpp  reservoir.h  scene.cpp  scene.h  shading.cpp  shading.h  texture.cpp  tone_mapping.h  ui.cpp  ui.h  utils.cpp  utils.h
src/cereal/: glm_compat.hpp
src/post_processing/: tone_mapping.cpp  tone_mapping.h
src/ray_tracing/: bounding_volume_hierarchy.cpp  bounding_volume_hierarchy.h  bvh_interface.h  embree_interface.cpp  embree_interface.h  interpolate.cpp  intersect.cpp  intersect.h
src/rendering/: neighbour_selection.cpp  neighbour_selection.h  render.cpp  render.h  render_utils.cpp  render_utils.h  reservoir.cpp  reservoir.h  shading.cpp  shading.h
src/scene/: light.cpp  light.h  scene.cpp  scene.h  texture.cpp  texture.h
src/ui/: draw.h  ui.cpp  ui.h
src/utils/: common.h  config.cpp  config.h  utils.cpp  utils.h
